--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lizamagalhaes/cypress-do-zero-a-nuvem.git"
+    "url": "git+https://github.com/lizamagalhaes/cypress-do-zero-a-nuvem"
   },
   "keywords": [
     "Testing",
