--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   ],
   "author": "Walmyr <wlsf82@gmail.com> (https://walmyr.dev/)",
   "license": "MIT",
-  "homepage": "https://github.com/lizamagalhaes/cypress-do-zero-a-nuvem#readme"
+  "homepage": "https://github.com/lizamagalhaes/cypress-do-zero-a-nuvem#readme",
+  "devDependencies": {
+    "cypress": "^14.0.0"
+  }
 }
