--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cy:open:mobile": "cypress open --config viewportWidth=410,viewportHeight=860",
     "test": "cypress run",
     "test:mobile": "cypress run --config viewportWidth=410,viewportHeight=860",
-    "test:cloud": "cypress run --record --key <5a98bf38-fc8a-40f1-8114-82aae7a68824>"
+    "test:cloud": "cypress run --record --key 5a98bf38-fc8a-40f1-8114-82aae7a68824"
   },
   "repository": {
     "type": "git",
